Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,22 +1,17 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Start accepting e-commerce native checkout in under 5 minutes'
 ---
 
 ## Setup your development
 
-Learn how to update your docs locally and and deploy them to the public.
+Learn how to host [Lucy](https://app.bundl.ai/bot) in your platform locally and deploy them to the public.
 
 ### Edit and preview
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="github" title="Clone our Github Repo locally">
+    Clone our Lucy Bot repository from our Github. You can find this repository [here](https://github.com/krusherks/lucy-bot).
   </Accordion>
   <Accordion icon="rectangle-terminal" title="Preview changes">
     Previewing helps you make sure your changes look as intended. We built a
