--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,28 +1,27 @@
 ---
 title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+description: "Introduction to how to use Bundl AI's API endpoints."
 ---
-
+### Bundl AI API Reference
 <Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
+  If you're looking for a step by step walkthrough on how to use the API endpoints, you need to start at the [Getting Started](https://docs.bundl.ai/getting-started) section that explains from start to finish how to integrate the API endpoints in to your platform.
 </Note>
 
 ## Welcome
 
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
+There are two ways to build Native e-Commerce Checkout: [Quick Start](https://docs.bundl.aiquickstart) and [Getting Started](https://docs.bundl.ai/getting-started). For the Quick Start, we are using the following GitHub Repo.
 
 <Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
+  title="Lucy Bot"
+  icon="github"
+  href="https://github.com/krusherks/lucy-bot"
 >
-  View the OpenAPI specification file
+  View the Vanilla JS Bot code
 </Card>
 
 ## Authentication
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+If you want to monetize your e-commerce sales, [contact us](mailto:krusherks@gmail.com) for your Bearer token.
 
 ```json
 "security": [
