Documentation edits made through Mintlify web editor

--- a/getting-started.mdx
+++ b/getting-started.mdx
@@ -1,4 +1,40 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: 'Getting Started'
+description: 'Detailed guide explaining how to use the API endpoints to perform Native Checkout'
 ---
+
+## Overview
+
+Enabling native checkout using Bundl AI is as east as following these 4 steps:
+
+<CardGroup>
+
+<Card title="Create Cart" icon="plus" href="/api-reference/checkout/create-checkout-cart">
+  Create a cart object every time a customer logs into your dashboard
+</Card>
+
+<Card
+  title="Show Products using AI"
+  icon="grid"
+  href="/api-reference/ai-recommendation/get-ai-recommended-skus"
+>
+  Use Bundl's poweful AI recommendation engine to show customers products they actually want
+</Card>
+
+<Card
+  title="Add product to cart"
+  icon="chart-mixed"
+  href="/api-reference/checkout/add-product-to-cart"
+>
+  Add Product using variantId to the cart you created in Step 1
+</Card>
+
+<Card
+  title="Perform Checkout"
+  icon="coin"
+  href="/settings/custom-domain/subdomain"
+>
+  Direct customer to checkout page with express checkout, wllets enabled
+</Card>
+
+</CardGroup>
