Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -9,7 +9,7 @@ description: "Introduction to how to use Bundl AI's API endpoints."
 
 ## Welcome
 
-There are two ways to build Native e-Commerce Checkout: [Quick Start](https://docs.bundl.aiquickstart) and [Getting Started](https://docs.bundl.ai/getting-started). For the Quick Start, we are using the following GitHub Repo.
+There are two ways to build Native e-Commerce Checkout: [Quickstart](https://docs.bundl.ai/quickstart) and [Setup Guide](https://docs.bundl.ai/getting-started). For the Quick Start, we are using the following GitHub Repo.
 
 <Card
   title="Lucy Bot"
@@ -21,7 +21,7 @@ There are two ways to build Native e-Commerce Checkout: [Quick Start](https://do
 
 ## Authentication
 
-If you want to monetize your e-commerce sales, [contact us](mailto:krusherks@gmail.com) for your Bearer token.
+If you want to monetize your e-commerce sales, [Contact us](mailto:krusherks@gmail.com) for your Bearer token.
 
 ```json
 "security": [
