--- a/getting-started.mdx
+++ b/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Getting Started'
+title: 'Setup Guide'
 description: 'Detailed guide explaining how to use the API endpoints to perform Native Checkout'
 ---
 
