--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,43 @@
 ---
-title: Introduction
+title: Welcome to Bundl AI ✨
 description: 'Welcome to the home of your new documentation'
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+## What is Bundl AI?
 
-## Setting up
+Bundl AI is the future of contextual driven commerce. We have a suite of APIs ranging from powerful AI recommendation engines to Native Checkout APIs.
 
-The first step to world-class documentation is setting up your editing environments.
+## Jump Right in
+
+Get jump started by browsing our ready made collections.
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
+    title="Quickstart"
     icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    href="https://docs.bundl.ai/quickstart"
   >
-    Customize your docs to your company's colors and brands
+    Customize our lucy bot with your company's colors and brands
   </Card>
   <Card
     title="Reference APIs"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="https://docs.bundl.ai/api-reference"
   >
     Automatically generate endpoints from an OpenAPI spec
   </Card>
   <Card
-    title="Add Components"
+    title="Setup Guide"
     icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
+    href="https://docs.bundl.ai/getting-started"
   >
-    Build interactive features and designs to guide your users
+    Follow our step by step guide on how to use our APIs to build your very own e-commerce integration from scratch
   </Card>
   <Card
-    title="Get Inspiration"
+    title="Lucy Bot"
     icon="stars"
-    href="https://mintlify.com/showcase"
+    href="https://app.bundl.ai/bot"
   >
-    Check out our showcase of our favorite documentation
+    Check out our Lucy e-commerce bot to get an idea of the potential of our APIs
   </Card>
 </CardGroup>
