Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -6,7 +6,9 @@ description: 'Welcome to the home of your new documentation'
 ## What is Bundl AI?
 
 Bundl AI is the future of contextual driven commerce. We have a suite of APIs ranging from powerful AI recommendation engines to Native Checkout APIs.
-
+<Note>
+  Our docs are AI enabled! Try asking a question by triggering our search bar.
+</Note>
 ## Jump Right in
 
 Get jump started by browsing our ready made collections.
