Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,13 +1,13 @@
 ---
 title: Welcome to Bundl AI ✨
-description: 'Welcome to the home of your new documentation'
+description: 'Welcome to the home of Bundl's documentation'
 ---
 
 ## What is Bundl AI?
 
 Bundl AI is the future of contextual driven commerce. We have a suite of APIs ranging from powerful AI recommendation engines to Native Checkout APIs.
 <Note>
-  Our docs are AI enabled! Try asking a question by triggering our search bar.
+  Our docs are AI enabled! Try asking a question by trigering the search bar.
 </Note>
 ## Jump Right in
 
