--- a/introduction.mdx
+++ b/introduction.mdx
@@ -26,7 +26,7 @@ Get jump started by browsing our ready made collections.
     icon="code"
     href="https://docs.bundl.ai/api-reference"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Our API reference has an interactive plaground feature which allows you to test all API calls right from the docs!
   </Card>
   <Card
     title="Setup Guide"
