Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,7 +19,7 @@ Get jump started by browsing our ready made collections.
     icon="palette"
     href="https://docs.bundl.ai/quickstart"
   >
-    Customize our lucy bot with your company's colors and brands
+    Customize our Lucy bot with your company's colors and brands
   </Card>
   <Card
     title="Reference APIs"
