Documentation edits made through Mintlify web editor

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -11,7 +11,7 @@ Learn how to host [Lucy](https://app.bundl.ai/bot) in your platform locally and 
 
 <AccordionGroup>
   <Accordion icon="github" title="Clone our Github Repo locally">
-    Clone our Lucy Bot repository from our Github. You can find this repository [here](https://github.com/krusherks/lucy-bot).
+    Clone our Lucy Bot repository from our Github. You can find this repository [here](https://github.com/krusherks/lucy-bot)
   </Accordion>
   <Accordion icon="rectangle-terminal" title="Preview changes">
     Previewing helps you make sure your changes look as intended. Change the CSS and make the bot your own!
